Adicionada listagem de posts e criação de comentários

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,10 +108,13 @@ input[type='text'] {
 
 textarea {
     height: 70px;
-    width: 400px;    
+    width: 400px;
 }
 
 input, select, textarea {
     margin-bottom: 8px;
 }
 
+.post,.show img {
+    width: 100%;
+}
