--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,12 @@ block content
         each post, i in posts 
            .post
                h1
-                  a(href='/posts/v/#{post._id}')=post.title
-               p.meta Posted in #{post.category} by #{post.author} on #{moment(post.date).format("DD/MM/YYYY")}
-               !=post.body
-               a.more(href='/posts/v/#{post._id}') Read more
+                  a(href='/posts/show/#{post._id}')=post.title
+               p.meta Posted in 
+                   a(href='/categories/show/#{post.category}') #{post.category} 
+                   by #{post.author} on #{moment(post.date).format("DD/MM/YYYY")}
+               img(src='/uploads/#{post.image}')
+               !=truncateText(post.body, 400)
+               a.more(href='/posts/show/#{post._id}') Read more
     else 
        p.noposts There are no posts to display.
